; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libevent/test/extr_regress_rpc.c_GotErrorCb.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libevent/test/extr_regress_rpc.c_GotErrorCb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evrpc_status = type { i64 }
%struct.msg = type { i32 }
%struct.kill = type { i32 }

@EVRPC_STATUS_ERR_TIMEOUT = common dso_local global i64 0, align 8
@test_ok = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.evrpc_status*, %struct.msg*, %struct.kill*, i8*)* @GotErrorCb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @GotErrorCb(%struct.evrpc_status* %0, %struct.msg* %1, %struct.kill* %2, i8* %3) #0 {
  %5 = alloca %struct.evrpc_status*, align 8
  %6 = alloca %struct.msg*, align 8
  %7 = alloca %struct.kill*, align 8
  %8 = alloca i8*, align 8
  store %struct.evrpc_status* %0, %struct.evrpc_status** %5, align 8
  store %struct.msg* %1, %struct.msg** %6, align 8
  store %struct.kill* %2, %struct.kill** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load %struct.evrpc_status*, %struct.evrpc_status** %5, align 8
  %10 = getelementptr inbounds %struct.evrpc_status, %struct.evrpc_status* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @EVRPC_STATUS_ERR_TIMEOUT, align 8
  %13 = icmp ne i64 %11, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %4
  br label %23

15:                                               ; preds = %4
  %16 = load %struct.kill*, %struct.kill** %7, align 8
  %17 = call i64 @kill_complete(%struct.kill* %16)
  %18 = icmp eq i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %15
  br label %23

20:                                               ; preds = %15
  %21 = load i32, i32* @test_ok, align 4
  %22 = add nsw i32 %21, 1
  store i32 %22, i32* @test_ok, align 4
  br label %23

23:                                               ; preds = %20, %19, %14
  %24 = call i32 @event_loopexit(i32* null)
  ret void
}

declare dso_local i64 @kill_complete(%struct.kill*) #1

declare dso_local i32 @event_loopexit(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
